<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewMeetFragment">


    <LinearLayout
        android:id="@+id/addNew_LL_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/what"
            android:textStyle="bold"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewWhy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <EditText
                android:id="@+id/addNew_et_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ems="10"
                android:hint="Sujet de la réunion"
                android:inputType="textPersonName"
                />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/when"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewWhen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="8dp">

                <LinearLayout
                    android:id="@+id/addNew_LL_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/editTextDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="le 23/08/1990"
                        android:inputType="date"
                        android:textSize="16dp"
                        android:layout_weight="1"
                        android:layout_gravity="start"/>

                    <TextView
                        android:id="@+id/tvEditDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit"
                        android:gravity="end"
                        />

                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addNew_LL_date" />

                <LinearLayout
                    android:id="@+id/addNew_LL_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="end"
                    android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/divider"
                    tools:layout_editor_absoluteX="16dp">

                    <TextView
                        android:id="@+id/tvHour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="à 10h30"
                        android:inputType="date"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider" />

                    <TextView
                        android:id="@+id/tvEditHour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit" />

                </LinearLayout>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addNew_LL_time" />

                <LinearLayout
                    android:id="@+id/addNew_LL_duration"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/divider2"
                    android:padding="8dp"
                    >

                    <SeekBar
                        android:id="@+id/seekBar"
                        style="@style/Widget.AppCompat.SeekBar"
                        android:layout_weight="1"
                        android:layout_height="48dp"
                        android:indeterminate="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="wrap_content" />

                    <TextView
                        android:id="@+id/addNew_tv_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="2"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:textAlignment="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="h"
                        android:textSize="16dp"
                        android:textAlignment="center"
                        />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/where"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewWhere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/AddActSpinnerRoom"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="16dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/who"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewWho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <EditText
                    android:id="@+id/AddActEditTextTextLeader"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Leader"
                    android:inputType="textCapSentences"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/AddActEditTextTextLeader" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/chipGroup"
                    tools:layout_editor_absoluteX="16dp">

                    <EditText
                        android:id="@+id/AddActEditTextMail"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="mon.collegue@entreprise.com"
                        android:inputType="textEmailAddress"
                        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
                        tools:layout_editor_absoluteX="4dp" />

                    <ImageButton
                        android:id="@+id/AddMailBtn"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_add_24"
                        app:layout_constraintStart_toEndOf="@+id/AddActEditTextTextLeader"
                        app:layout_constraintTop_toTopOf="parent"
                        style="?android:buttonBarButtonStyle"
                        />
                </LinearLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:paddingTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider3"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/validateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/validate" />


    </LinearLayout>

</FrameLayout>