...
        app:cardBackgroundColor="@color/purple_200"
        >
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView_leader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="14"
        android:maxLines="1"
        android:paddingBottom="4dp"
...
        android:textSize="12dp"
        android:paddingStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/roomColorDotCard"
        app:layout_constraintTop_toBottomOf="@+id/textView_leader" />

    <ImageView
        android:id="@+id/meet_row_iv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
...
